# Proteus

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  int_workload_gen.cpp  str_workload_gen.cpp
SuRF/: .gitignore  CMakeLists.txt  my_example.cpp  simple_example.cpp
SuRF/ARF/: README.md
SuRF/ARF/include/: ARF.h  Database.h  Query.h  Statistics.h  Util.h
SuRF/ARF/src/: ARF.cpp  Database.cpp  Statistics.cpp  Util.cpp
SuRF/ARF/test/: test_arf.cpp
SuRF/bench/: CMakeLists.txt  bench.hpp  disk_access.h  my_run.sh  my_workload.cpp  run.sh  run_SuRF.sh
SuRF/bench/workload_gen/: gen_load.py  gen_txn.py  gen_workload.sh
SuRF/bench/workload_gen/workload_spec/: workloadc_email_uniform
SuRF/include/: bitvector.hpp  config.hpp  hash.hpp  label_vector.hpp  louds_dense.hpp  louds_sparse.hpp  popcount.h  rank.hpp  select.hpp  suffix.hpp  surf.hpp
SuRF/test/unitTest/: test_louds_dense.cpp  test_louds_sparse.cpp  test_surf.cpp  test_surf_small.cpp
bench/: Makefile  bench.cpp  bench.sh  in-memory.sh  rocksdb.sh
include/: MurmurHash3.cpp  MurmurHash3.hpp  bitvector.hpp  clhash.cpp  clhash.hpp  config.cpp  config.hpp  label_vector.hpp  louds_dense.hpp  louds_sparse.hpp  modeling.cpp  modeling.hpp  popcount.h  prefixbf.cpp  prefixbf.hpp  proteus.hpp  rank.hpp  select.hpp  suffix.hpp  surf_builder.hpp  util.cpp  util.hpp
rocksdb-6.20.3/: CMakeLists.txt
rocksdb-6.20.3/filter_experiment/: CMakeLists.txt  filter_exp_util.cc  filter_exp_util.h  filter_experiment.cc
workloads/: Makefile  int_workload_gen.cpp  process_sosd.cpp  setup.sh  str_workload_gen.cpp
(+11 files in other folders)
